se puso a funcionar el registro de usuario nuevo

--- a/view/registro.html
+++ b/view/registro.html
@@ -15,24 +15,28 @@
         <h1 style="color:white">Scröninger's Box</h1>
     </div>
     <div class="column">
-        <input type="text" placeholder="Usuario ID" class="inputtext" id="ID_name">
-        <input type="text" placeholder="Nombre de usuario" class="inputtext" id="User_name">
-        <input type="email" placeholder="Correo" class="inputtext" id="correo">
-        <input type="password" placeholder="Contraseña" class="inputtext" id="contrasena">
-        <input type="password" placeholder="confirmar contraseña" class="inputtext" id="contrasena2">
-        <input type="url" placeholder="url de perfil" class="inputtext" id="foto">
-        <div style="display: flex; flex-direction:row; align-items: center;">
-            <input type="checkbox" id="spoilers">
-            <label for="spoilers" class="letra2">Ver spoilers</label>
-        </div>
-        <div style="display: flex; flex-direction:row; align-items: center;">
-            <input type="checkbox" id="Mayoredad">
-            <label for="Mayoredad" class="letra2">Soy Mayor</label>
-        </div>
-        <div id="error"></div>
-        <div class="divboton">
-            <button class="botondefault2" type="submit" id="crearcuenta">Crear cuenta</button>
-        </div>
+        <form action="" class="column" id="formu">
+            <input type="text" placeholder="Usuario ID" class="inputtext" id="ID_name">
+            <input type="text" placeholder="Nombre de usuario" class="inputtext" id="User_name">
+            <input type="email" placeholder="Correo" class="inputtext" id="correo">
+            <input type="password" placeholder="Contraseña" class="inputtext" id="contrasena">
+            <input type="password" placeholder="confirmar contraseña" class="inputtext" id="contrasena2">
+            <input type="url" placeholder="url de perfil" class="inputtext" id="foto">
+            <div style="display: flex; flex-direction:row; align-items: center;">
+                <input type="checkbox" id="spoilers">
+                <label for="spoilers" class="letra2">Ver spoilers</label>
+            </div>
+            <div style="display: flex; flex-direction:row; align-items: center;">
+                <input type="checkbox" id="Mayoredad">
+                <label for="Mayoredad" class="letra2">Soy Mayor</label>
+            </div>
+            <div id="error">
+
+            </div>
+            <div class="divboton">
+                <button class="botondefault2" type="submit" id="crearcuenta">Crear cuenta</button>
+            </div>
+        </form>
     </div>
     <div class="divfooter">
         <h2 style="color:white" class="comentariogato">Cada post es una paradoja pero no todas las paradojas son post, no hagas nada ilegal, ten cordura y paciencia. Se un buen minino</h2>
